--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
 
 <head>
+    <!--==================== AUTHOR AND DESCRIPTION ====================-->
+    <meta name="description" content="Menu responsive." />
+    <meta name="author" content="Jorge de Jesús Pérez López." />
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
